--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex">
-    <title>Rezepte</title>
+    <title>Recipes</title>
 
     <script src="libs/markdown-it.min.js"></script>
     <link rel="stylesheet" href="libs/modern-normalize.min.css">
