--- a/index.html
+++ b/index.html
@@ -106,46 +106,67 @@
         }
 
         @media print, screen and (min-width: 600px) {
-            .container {
+            /* Only apply grid layout to recipe container, not recipe list */
+            #recipe-container {
                 display: grid;
                 grid-template-columns: 1fr 320px;
                 gap: 16px;
                 align-items: start;
             }
 
-            #title-wrapper, #subheader {
+            #recipe-container #title-wrapper, 
+            #recipe-container #subheader {
                 grid-column: 1 / -1;
             }
 
-            #steps-container, #notes-container, #based-on-container {
+            #recipe-container #steps-container, 
+            #recipe-container #notes-container, 
+            #recipe-container #based-on-container {
                 grid-column: 1;
             }
 
-            #info-container, #ingredients-container {
+            #recipe-container #info-container, 
+            #recipe-container #ingredients-container {
                 grid-column: 2;
                 width: 100%;
                 float: none;
                 margin: 0;
             }
 
-            #info-container {
+            #recipe-container #info-container {
                 order: 1;
             }
 
-            #ingredients-container {
+            #recipe-container #ingredients-container {
                 order: 2;
             }
 
-            #steps-container {
+            #recipe-container #steps-container {
                 order: 3;
             }
 
-            #notes-container {
+            #recipe-container #notes-container {
                 order: 4;
             }
 
-            #based-on-container {
+            #recipe-container #based-on-container {
                 order: 5;
+            }
+
+            /* Keep the original float layout for recipe list */
+            #recipe-list #info-container {
+                width: 320px;
+                float: right;
+                margin: 4px 0 16px 16px;
+            }
+
+            #recipe-list #ingredients-container {
+                width: 320px;
+                background-color: #eee;
+                float: right;
+                padding: 0px 24px 16px;
+                margin: 4px 0 16px 16px;
+                border-radius: 8px;
             }
         }
     </style>
