--- a/index.html
+++ b/index.html
@@ -11,179 +11,164 @@
     <link rel="stylesheet" href="libs/modern-normalize.min.css">
     <link rel="stylesheet" href="libs/water.light.min.css">
 
+
     <style>
+        :root {
+            /* Gruvbox dark palette */
+            --bg-dark: #1d2021;
+            --bg: #282828;
+            --bg-light: #3c3836;
+            --fg: #ebdbb2;
+            --fg-dim: #d5c4a1;
+            --red: #fb4934;
+            --green: #b8bb26;
+            --yellow: #fabd2f;
+            --blue: #83a598;
+            --purple: #d3869b;
+            --aqua: #8ec07c;
+            --orange: #fe8019;
+            --gray: #a89984;
+        }
 
-:root{
-  --bg: #282828;
-  --bg-alt: #3c3836;
-  --card-bg: #3c2f2f; /* subtle card alt */
-  --fg: #ebdbb2;
-  --fg-dim: #bdae93;
-  --accent-blue: #83a598;
-  --accent-aqua: #8ec07c;
-  --accent-orange: #fe8019;
-  --accent-yellow: #fabd2f;
-  --accent-green: #b8bb26;
-  --accent-red: #fb4934;
-  --muted-border: rgba(255,255,255,0.04);
-}
+        body {
+            background-color: var(--bg);
+            color: var(--fg);
+            font-family: system-ui, sans-serif;
+        }
 
-/* sensible reset for sizing (fixes many broken div-size issues) */
-* { box-sizing: border-box; }
-html,body { height: 100%; margin: 0; padding: 0; background: var(--bg); color: var(--fg); font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; line-height:1.45; }
+        a {
+            color: var(--aqua);
+            text-decoration: none;
+        }
 
-/* Make container visible again (you previously had display:none) */
-.container {
-  display: block;
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 16px;
-}
+        a:hover {
+            color: var(--orange);
+        }
 
-/* Top site header (logo + nav) */
-.site-header {
-  background: linear-gradient(180deg, rgba(255,255,255,0.02), transparent);
-  border: 1px solid var(--muted-border);
-  border-radius: 10px;
-  padding: 12px 16px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: 12px;
-  margin-bottom: 16px;
-}
+        .container {
+            display: none;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+            padding: 0 16px 16px;
+        }
 
-/* logo/title area */
-.logo {
-  display:flex;
-  flex-direction: column;
-  gap: 2px;
-}
-.logo h1, #title {
-  margin: 0;
-  color: var(--accent-yellow);
-  font-size: 1.25rem;
-  letter-spacing: 0.2px;
-}
-.logo .subtitle, #subheader {
-  margin: 0;
-  color: var(--fg-dim);
-  font-size: 0.9rem;
-  font-style: italic;
-  margin-top: -2px;
-}
+        @media print {
+            #back-link {
+                display: none;
+            }
+        }
 
-/* simple nav */
-.site-nav {
-  display:flex;
-  gap: 10px;
-  align-items:center;
-  flex-wrap:wrap;
-}
-.site-nav a {
-  color: var(--accent-blue);
-  text-decoration: none;
-  padding: 6px 10px;
-  border-radius: 6px;
-  font-weight: 600;
-  transition: all .12s ease;
-  border: 1px solid transparent;
-  background: transparent;
-}
-.site-nav a:hover { color: var(--accent-aqua); background: rgba(255,255,255,0.02); border-color: rgba(255,255,255,0.02); }
-.site-nav a:focus { outline: 2px solid var(--accent-yellow); outline-offset: 3px; }
+        #back-link {
+            margin-right: 8px;
+            color: var(--fg);
+        }
 
-/* default link styling for content */
-a {
-  color: var(--accent-blue);
-  text-decoration: none;
-  border-bottom: 1px dashed transparent;
-  transition: color .12s ease, border-color .12s ease;
-}
-a:hover { color: var(--accent-aqua); text-decoration: underline; border-bottom-color: rgba(255,255,255,0.04); }
-a:visited { color: var(--fg-dim); }
-a:focus-visible { outline: 2px solid var(--accent-yellow); outline-offset: 2px; }
+        #back-icon {
+            height: 28px;
+            width: 28px;
+            margin-bottom: -2px;
+            stroke: var(--fg);
+        }
 
-/* Grid layout to replace floats — recommended */
-.content-grid {
-  display: grid;
-  grid-template-columns: 1fr minmax(280px, 360px);
-  gap: 16px;
-  align-items: start;
-}
+        #title-wrapper {
+            margin-top: 16px;
+            margin-bottom: 8px;
+            display: flex;
+            align-items: baseline;
+        }
 
-/* Main column (left) */
-.main-column {
-  min-width: 0; /* important for overflowing text in flex/grid children */
-}
+        #title {
+            margin: 0;
+            color: var(--yellow);
+        }
 
-/* Sidebar column (right) — holds info and ingredients in order) */
-.sidebar {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  min-width: 0;
-}
+        #subheader {
+            font-style: italic;
+            color: var(--fg-dim);
+            margin-top: -8px;
+            margin-bottom: 16px;
+        }
 
-/* Card-like containers */
-#info-container,
-#ingredients-container,
-#steps-container,
-#notes-container,
-#based-on-container {
-  background-color: var(--bg-alt);
-  padding: 12px 20px;
-  border-radius: 8px;
-  border-left: 4px solid transparent;
-  overflow: visible;
-}
+        #info-container {
+            background-color: var(--bg-light);
+            color: var(--fg);
+            padding: 8px 24px 8px;
+            margin-top: 16px;
+            border-radius: 8px;
+            border-left: 4px solid var(--blue);
+        }
 
-/* individual accents */
-#info-container { border-left-color: var(--accent-blue); }
-#ingredients-container { border-left-color: var(--accent-green); background-color: var(--card-bg); }
-#notes-container { border-left-color: var(--accent-orange); background-color: #504945; }
-#based-on-container { background-color: var(--card-bg); color: var(--fg-dim); }
+        #info-container h2::before {
+            content: "⏱️ ";
+        }
 
-/* headings / icons */
-#info-container h2::before { content: "⏱️ "; }
-#ingredients-container h2::before { content: "📋 "; }
-#steps-container h2::before { content: "🔪 "; }
-#notes-container h2::before { content: "💡 "; }
-#based-on-container h2::before { content: "🔗 "; }
+        #ingredients-container {
+            background-color: var(--bg-light);
+            color: var(--fg);
+            padding: 8px 24px 16px;
+            margin-top: 16px;
+            border-radius: 8px;
+            border-left: 4px solid var(--green);
+        }
 
-h2 {
-  margin-top: 0;
-  margin-bottom: 8px;
-  color: var(--accent-orange);
-  font-size: 1.05rem;
-}
+        #ingredients-container h2::before {
+            content: "📋 ";
+        }
 
-/* small screens: stack everything */
-@media (max-width: 900px) {
-  .content-grid { grid-template-columns: 1fr; }
-  .site-header { flex-direction: column; align-items: stretch; gap: 8px; }
-  .site-nav { justify-self: end; }
-}
+        #steps-container {
+            background-color: var(--bg-dark);
+            color: var(--fg);
+            padding: 8px 24px 16px;
+            margin-top: 16px;
+            border-radius: 8px;
+            border-left: 4px solid var(--orange);
+        }
 
-/* print rules (keep original intent) */
-@media print {
-  #back-link { display:none; }
-}
+        #steps-container h2::before {
+            content: "🔪 ";
+        }
 
-/* ===== Compatibility: quick float-fix if you kept the old float HTML =====
-   If your HTML still uses floated #info-container / #ingredients-container,
-   add this clearfix to the parent to restore proper parent height.
-*/
-.clearfix::after {
-  content: "";
-  display: table;
-  clear: both;
-}
+        #notes-container {
+            background-color: var(--bg-light);
+            color: var(--fg);
+            padding: 8px 24px 16px;
+            margin-top: 16px;
+            border-radius: 8px;
+            border-left: 4px solid var(--purple);
+        }
 
-/* Also ensure any floated elements are overridden by the new layout */
-#info-container[style*="float"], #ingredients-container[style*="float"] {
-  float: none !important;
-}
+        #notes-container h2::before {
+            content: "💡 ";
+        }
+
+        #based-on-container {
+            background-color: var(--bg-dark);
+            color: var(--fg-dim);
+            padding: 8px 24px 16px;
+            margin-top: 16px;
+            border-radius: 8px;
+            border-left: 4px solid var(--gray);
+            font-size: 0.9em;
+        }
+
+        #based-on-container h2::before {
+            content: "🔗 ";
+        }
+
+        @media print, screen and (min-width: 600px) {
+            #info-container {
+                width: 320px;
+                float: right;
+                margin: 4px 0 16px 16px;
+            }
+
+            #ingredients-container {
+                width: 320px;
+                float: right;
+                margin: 4px 0 16px 16px;
+            }
+        }
     </style>
 
     <script>
